Advanced/CalculaterCPP-01/Calculater/Calculater/calc.h

/*
编码：袁春旭
讲解：袁春旭
主题：带参数的导出函数
 */
#pragma once

__declspec(dllexport) int add1(int a, int b);

__declspec(dllexport) double add2(double a, double b);

__declspec(dllexport) int add3(char *str1, int size, char *str2);